tests/snapshots/cli__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/cli.rs
expression: stdout
---
Copy source to scratch directory ... done
Unmutated baseline ... ok
Found 1 mutant to test
1 mutants tested: 1 caught

