tests/snapshots/cli__cargo_mutants_in_replace_dependency_tree_passes.snap
---
source: tests/cli.rs
expression: stdout
---
Found 2 mutants to test
Copy source to scratch directory ... done
Unmutated baseline ... ok
2 mutants tested: 2 caught

