tests/snapshots/cli__cdylib_tree_is_well_tested.snap
---
source: tests/cli.rs
expression: stdout
---
Found 1 mutant to test
Copy source to scratch directory ... done
Unmutated baseline ... ok
src/entry.rs:1: replace factorial -> u32 with Default::default() ... caught
1 mutant tested: 1 caught

