tests/snapshots/cli__check_succeds_in_tree_that_builds_but_fails_tests.snap
---
source: tests/cli.rs
assertion_line: 289
expression: stdout

---
check source tree ... ok
copy source and build products to scratch directory ... done
baseline test with no mutations ... ok
src/lib.rs:1: replace factorial -> u32 with Default::default() ... check ok

