tests/snapshots/cli__check_succeeds_in_tree_that_builds_but_fails_tests.snap
---
source: tests/cli.rs
expression: stdout
---
Freshen source tree ... ok
Copy source and build products to scratch directory ... done
Unmutated baseline ... ok
Found 1 mutant to test
src/lib.rs:1: replace factorial -> u32 with Default::default() ... check ok
1 mutants tested: 1 builds succeeded

