tests/snapshots/cli__check_tree_with_mutants_skip.snap
---
source: tests/cli.rs
expression: stdout
---
Found 1 mutant to test
Copy source to scratch directory ... done
Unmutated baseline ... ok
src/lib.rs:14: replace controlled_loop with () ... ok
1 mutant tested: 1 succeeded

