tests/snapshots/cli__factorial_mutants_no_copy_target.snap
---
source: tests/cli.rs
expression: stdout
---
Found 2 mutants to test
Copy source to scratch directory ... done
Unmutated baseline ... ok
src/bin/factorial.rs:1: replace main with () ... NOT CAUGHT
2 mutants tested: 1 missed, 1 caught

