tests/snapshots/cli__insta_tree_succeeds_and_leaves_no_snaphots.snap
---
source: tests/cli.rs
expression: caught_txt
---
src/lib.rs:1: replace say_hello with "".into()
src/lib.rs:1: replace say_hello with "xyzzy".into()

