tests/snapshots/cli__list_files_in_cwd.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"

---
src/bin/main.rs

